# GlobalRoamer-Enterprise-AI-Observability-Platform

./: .dockerignore  .env.example  DECISIONS.MD  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docker/: api.Dockerfile
etc/: globalroamer_ai_config.yml  sample_trace.csv  trace_mapping.yml
globalroamer_platform/: main.py
globalroamer_platform/bootstrap/: __init__.py  chunk_worker.py  embedding.py  embedding_provider.py  event_dispatcher.py  normalizer_worker.py  outbox.py  outbox_worker.py  parser_worker.py  runtime.py  settings.py  trace_parsing.py  trace_processing.py  trace_submission.py
globalroamer_platform/core/: config.py  exceptions.py  logging.py  startup.py
globalroamer_platform/runtime/: application_runtime.py  event_dispatcher.py  event_runtime.py  event_runtime_worker.py  session_scoped_event_handler.py  session_scoped_outbox_publisher.py
globalroamer_platform/telemetry/: instrumentation.py  metrics.py  tracing.py
globalroamer_platform/workers/: chunk_worker.py  embedding_worker.py  normalizer_worker.py  outbox_publisher.py  outbox_worker.py  parser_worker.py  run_outbox_worker.py  run_parser_worker.py
migrations/: env.py  script.py.mako
migrations/versions/: 0a027abbf53f_create_operational_events_table.py  15ef6de8fe59_create_source_artifacts_table.py  5330ff620be8_create_initial_tables.py  76f87a6e46bf_create_parsed_traces_table.py  7d0121e966b9_create_outbox_messages.py  99828d7fe2f2_create_trace_chunks_table.py  ffa284f522ef_create_embedding_records_table.py
scripts/: parse_trace_smoke_test.py  parsed_trace_store_smoke_test.py  process_trace_smoke_test.py
tests/api/: test_trace_processing.py
tests/bootstrap/: test_event_dispatcher.py
tests/config/: globalroamer_ai_test.yml
tests/integration/: test_parser_event_flow.py  test_trace_processing_endpoint.py
tests/runtime/: test_event_dispatcher.py  test_session_scoped_event_handler.py
tests/workers/: test_chunk_worker.py  test_normalizer_worker.py  (+3 more)
(+113 files in other folders)
