[project]
name = "globalroamer-enterprise-ai-observability"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-multipart>=0.0.20",
    "structlog>=24.4",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.44.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-instrumentation-httpx>=0.65b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0",
    "PyYAML>=6.0,<7.0",
    "sentence-transformers>=3.4,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["globalroamer_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
